--- a/.gitignore
+++ b/.gitignore
@@ -154,6 +154,7 @@ cython_debug/
 
 # Others
 videos/
+runningline/media/*.mp4
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
